started DKT miccai poster

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -76,7 +76,7 @@ urlcolor=black
 %                                     \toctitle is used
 %
 
-\author{R\u{a}zvan V. Marinescu\inst{1,2} \and Marco Lorenzi\inst{5} \and Stefano Blumberg\inst{1} \and Alexandra L. Young\inst{1} \and Pere Planell-Morell\inst{1} \and Neil P. Oxtoby\inst{1} \and Arman Eshaghi\inst{1,3} \and Keir X. Young\inst{4} \and Sebastian J. Crutch\inst{4} \and Polina Golland\inst{2} \and Daniel C. Alexander\inst{1}, for the Alzheimer's Disease Neuroimaging Initiative} 
+\author{R\u{a}zvan V. Marinescu\inst{1,2} \and Marco Lorenzi\inst{5} \and Stefano B. Blumberg\inst{1} \and Alexandra L. Young\inst{1} \and Pere Planell-Morell\inst{1} \and Neil P. Oxtoby\inst{1} \and Arman Eshaghi\inst{1,3} \and Keir X. Young\inst{4} \and Sebastian J. Crutch\inst{4} \and Polina Golland\inst{2} \and Daniel C. Alexander\inst{1}, for the Alzheimer's Disease Neuroimaging Initiative} 
 
 % index{Marinescu, Razvan}
 % index{Lorenzi, Marco}
