--- a/paper/pres/poster-dkt.tex
+++ b/paper/pres/poster-dkt.tex
@@ -1,4 +1,4 @@
-\documentclass[portrait,a0,final,19pt]{a0poster}
+\documentclass[portrait,a0,final,20pt]{a0poster}
 %%%Load packages
 \usepackage{multicol} 			%2-column layout
 % \setlength\columnsep{8pt} % This is the default columnsep for all pages
@@ -21,6 +21,7 @@
 
 \usepackage{hyperref}
 \usepackage{xcolor}
+\usepackage{newtxtext,newtxmath}
 
 % \usepackage{titlepic}
 % \usepackage{columns}
@@ -67,17 +68,19 @@
 
 \newcommand{\inst}[1]{$^{#1}$}
 
-\author{\Large{R\u{a}zvan V. Marinescu\inst{1}, Neil P. Oxtoby\inst{1}, Alexandra L. Young\inst{1}, Arman Eshaghi\inst{2}, Peter A. Wijeratne\inst{1}, Daniel C. Alexander\inst{1}}\\
-\begin{tabular}{l p{1cm} l p{1cm} l}
-\large{$^1$Centre for Medical Image Computing, University College London}  & & \large{$^2$Queen Square MS Centre, UCL Institute of Neurology} \\
-\end{tabular}
-}
-
-% \author{R\u{a}zvan V. Marinescu\inst{1,2} \and Marco Lorenzi\inst{5} \and Stefano B. Blumberg\inst{1} \and Alexandra L. Young\inst{1} \and Pere Planell-Morell\inst{1} \and Neil P. Oxtoby\inst{1} \and Arman Eshaghi\inst{1,3} \and Keir X. Young\inst{4} \and Sebastian J. Crutch\inst{4} \and Polina Golland\inst{2} \and Daniel C. Alexander\inst{1}\\
+% \author{\Large{R\u{a}zvan V. Marinescu\inst{1}, Neil P. Oxtoby\inst{1}, Alexandra L. Young\inst{1}, Arman Eshaghi\inst{2}, Peter A. Wijeratne\inst{1}, Daniel C. Alexander\inst{1}}\\
 % \begin{tabular}{l p{1cm} l p{1cm} l}
 % \large{$^1$Centre for Medical Image Computing, University College London}  & & \large{$^2$Queen Square MS Centre, UCL Institute of Neurology} \\
 % \end{tabular}
-% } 
+% }
+
+\author{R\u{a}zvan V. Marinescu\inst{1,2}, Marco Lorenzi\inst{5}, Stefano B. Blumberg\inst{1}, Alexandra L. Young\inst{1}, Pere Planell-Morell\inst{1}, Neil P. Oxtoby\inst{1}, Arman Eshaghi\inst{1,3}, Keir X. Young\inst{4}, Sebastian J. Crutch\inst{4}, Polina Golland\inst{2}, Daniel C. Alexander\inst{1}\\
+\begin{tabular}{l p{1cm} l p{1cm} l}
+\large{$^1$Centre for Medical Image Computing, University College London}  & & \large{$^2$Queen Square MS Centre, UCL Institute of Neurology} \\
+\end{tabular}
+} 
+
+\newcommand{\fnt}[1]{\LARGE{#1}}
 
 
 
@@ -94,6 +97,8 @@
 %}
 % \vspace{-4cm}
 
+\fnt{
+
 \begin{multicols}{2}							
 \raggedcolumns							%Don't stretch contents vertically
 
@@ -101,27 +106,32 @@
 
 %%%Column1
 \vspace{-3em}
-\section*{Introduction}
 
 
+\section*{Aim}
+
+Propose mechanism to infer progression of non-MRI biomarkers in rare neurodegenerative diseases by leveraging larger datasets of common neurodegenerative diseases.
+
+\section*{Why}
+
+
+\newcommand{\lp}{\lambda_{d_i}^{\psi(k)}}
+\newcommand{\lpuu}{\lambda_{d_i}^{\psi(k),(u)}}
+\newcommand{\lpum}{\lambda_{d_i}^{\psi(k),(u-1)}}
 
 \begin{itemize}
- \item Recently disease progression models work well on large, multimodal datasets
- \item Datasets on rare neurodegenerative diseases (e.g., Posterior Cortical Atrophy) are limited and cross-sectional.
+ \item Datasets on rare neurodegenerative diseases (e.g., Posterior Cortical Atrophy) are unimodal (MRI only), cross-sectional and small.
+ \item The continuous progression of non-MRI markers in rare neurodegenerative diseases is not well understood
 \end{itemize}
 
 % \vspace{-0.5em}
 
-\section*{Aim}
 
-Develop a transfer learning model to transfer knowledge between diseases 
-
-
-
-% \begin{figure}[H]
-% \includegraphics[width=0.31\textwidth,trim=0 50 0 0, clip]{adniDiseaseProgression}
-% \caption{Hypothetical progression of typical Alzheimer's disease. The earliest biomarkers that become abnormal are the accumulation of abnormal amyloid-beta and tau proteins, which have a misfolded (i.e. abnormal) 3D structure. This is followed by structural integrity from MRI and finally cognitive decline as measured by cognitive tests.}
-% \end{figure}
+ 
+% \begin{itemize}
+%  \item by transferring knowledge from larger multimodal datasets of typical Alzheimer's disease
+%  \item jointly model multiple diseases and multiple modalities
+% \end{itemize}
 
 
 
@@ -130,43 +140,58 @@ Develop a transfer learning model to transfer knowledge between diseases
 
 
 
-\begin{itemize}
- \item We propose Disease Knowledge Transfer:
- \begin{itemize}
-   \item 
- \end{itemize}
+% \begin{itemize}
+%  \item We propose a joint-disease model called Disease Knowledge Transfer:
+ \vspace{1em}
+ \begin{figure}[H]
+ \centering
+  \begin{subfigure}{0.49\columnwidth}
+   \centering
+   \fnt{1. Each disease characterised by region-specific dysfunction profile}\\
+   $ \gamma_{ij}^l = f(\beta_{i} + m_{ij}; \lambda_{d_i}^l) $\\
+%    \vspace{0.9em}
+   \includegraphics[width=\textwidth]{diseaseEvol}
+   
+  \end{subfigure}
+  \begin{subfigure}{0.49\columnwidth}
+   \centering
+%    \vspace{-1.2em}
+   \fnt{2. Dysfunction score modelled using region-specific biomarkers}\\
+   $ p(y_{ijk}|\theta_k, \lp, \beta_{i}, \epsilon_k) = N(y_{ijk}| g( \gamma_{ij}^{\psi(k)} ; \theta_k), \epsilon_k) $
+%    \vspace{0.6em}
+   \includegraphics[width=\textwidth]{dysfuncEvol}
+  \end{subfigure}
 
-\end{itemize}
+ \end{figure}
+
+ 
+%    \item each disease has a unique evolution of region-specific dysfunction scores
+%    \item each dysfunction score modelled as the unique evolution of biomarkers within that region
+ 
+% \end{itemize}
+
 
 
 % \subsection{Method Overview}
 
-\newcommand{\lp}{\lambda_{d_i}^{\psi(k)}}
-\newcommand{\lpuu}{\lambda_{d_i}^{\psi(k),(u)}}
-\newcommand{\lpum}{\lambda_{d_i}^{\psi(k),(u-1)}}
-
-\begin{equation}
-\label{eqDysfunctionScoreDef}
- \gamma_{ij}^l = f(\beta_{i} + m_{ij}; \lambda_{d_i}^l)
-\end{equation}
 
 
-\begin{equation}
- p(y_{ijk}|\theta_k, \lp, \beta_{i}, \epsilon_k) = N(y_{ijk}| g( \gamma_{ij}^{\psi(k)} ; \theta_k), \epsilon_k)
-\end{equation}
 
 
-\begin{equation}
-\label{eq:dktFinal}
- p(\boldsymbol{y}|\theta, \lambda, \beta , \epsilon) = \\ \prod_{(i,j,k) \in \Omega} p(y_{ijk}|\theta_k, \lp, \beta_{i}) 
-\end{equation}
+% $ p(y_{ijk}|\theta_k, \lp, \beta_{i}, \epsilon_k) = N(y_{ijk}| g( \gamma_{ij}^{\psi(k)} ; \theta_k), \epsilon_k) $
+
+
+
 
 
 \begin{figure}[H]
  \centering
- \includegraphics[width=0.4\textwidth,]{../figures/disease_knowledge_transfer_symbols.pdf}
- \caption{}
- \label{fig:diagram}
+  \fnt{3. Extend to multiple subjects, biomarkers and diseases}\\
+ $ p(\boldsymbol{y}|\theta, \lambda, \beta , \epsilon) = \prod_{(i,j,k) \in \Omega} p(y_{ijk}|\theta_k, \lp, \beta_{i}) $
+ 
+ \includegraphics[width=\columnwidth]{../figures/disease_knowledge_transfer_symbols.pdf}
+%  \caption{}
+%  \label{fig:diagram}
 \end{figure}
 
 
@@ -175,20 +200,45 @@ Develop a transfer learning model to transfer knowledge between diseases
 
 
 \begin{figure}[H]
-%\includegraphics[width=\textwidth]{../resfiles/synth/synth1_JMD/compTrueParams101_synth1_JMD.pdf}
+\fnt{Synthetic experiment shows that the model can recover the underlying parameters}\\
 \includegraphics[width=0.4\textwidth]{../figures/compTrueParams105_synth1_JMD.pdf}
-\caption[DKT Simulation Results - Comparison between true and DKT-estimated biomarker trajectories and subject time-shifts.]{Comparison between true and DKT-estimated subject time-shifts and biomarker trajectories.}
   \label{fig:dktSynthTrajCompTrue}
 \end{figure}
 
 \begin{figure}[H]
 \centering
+\fnt{Inferred trajectories for Posterior Cortical Atrophy}\\
  \includegraphics[width=0.4\textwidth, trim=0 20 0 0, clip]{../figures/trajDisSpaceOverlap_PCA_tad-drcTinyPen5_JMD.png}
- \caption{Estimated trajectories for the PCA cohort. The only data that were available were the MRI volumetric data. The dynamics of the other biomarkers has been inferred by the model using data from typical AD, and taking into account the different spatial distribution of pathology in PCA vs tAD. }
- \label{fig:PCAtrajByModality}
+%  \caption{Estimated trajectories for the PCA cohort. The only data that were available were the MRI volumetric data. The dynamics of the other biomarkers has been inferred by the model using data from typical AD, and taking into account the different spatial distribution of pathology in PCA vs tAD. }
+%  \label{fig:PCAtrajByModality}
 \end{figure}
 
 
+\begin{table}[H]
+\centering
+\fnt{Our model has favourable performance compared to other models}\\
+\vspace{1em}
+\fontsize{27}{30}\selectfont
+\begin{tabular}{c | c c c c c c}
+\textbf{Model} & \textbf{Cingulate} & \textbf{Frontal} & \textbf{Hippocam.} & \textbf{Occipital} & \textbf{Parietal} & \textbf{Temporal}\\
+& \multicolumn{6}{c}{\textbf{TADPOLE: Hippocampal subgroup to Cortical subgroup}}\\
+DKT (ours) &      0.56 $\pm$ 0.23 &    \textbf{0.35 $\pm$ 0.17} &        \textbf{0.58 $\pm$ 0.14} &     -0.10 $\pm$ 0.29 &     \textbf{0.71 $\pm$ 0.11} &     \textbf{0.34 $\pm$ 0.26} \\
+Latent stage &      0.44 $\pm$ 0.25 &    0.34 $\pm$ 0.21 &       0.34 $\pm$ 0.24* &     \textbf{-0.07 $\pm$ 0.22} &     0.64 $\pm$ 0.16 &    0.08 $\pm$ 0.24* \\
+Multivariate &      \textbf{0.60 $\pm$ 0.18} &   0.11 $\pm$ 0.22* &       0.12 $\pm$ 0.29* &     -0.22 $\pm$ 0.22 &   -0.44 $\pm$ 0.14* &   -0.32 $\pm$ 0.29* \\
+Spline &    -0.24 $\pm$ 0.25* &  -0.06 $\pm$ 0.27* &        0.58 $\pm$ 0.17 &     -0.16 $\pm$ 0.27 &    0.23 $\pm$ 0.25* &    0.10 $\pm$ 0.25* \\
+Linear &    -0.24 $\pm$ 0.25* &   0.20 $\pm$ 0.25* &        0.58 $\pm$ 0.17 &     -0.16 $\pm$ 0.27 &    0.23 $\pm$ 0.25* &    0.13 $\pm$ 0.23* \\
+& \multicolumn{6}{c}{\textbf{typical Alzheimer's to Posterior Cortical Atrophy}}\\
+DKT (ours) &    0.77 $\pm$ 0.11 &    0.39 $\pm$ 0.26 &      0.75 $\pm$ 0.09 &    0.60 $\pm$ 0.14 &    \textbf{0.55 $\pm$ 0.24} &    \textbf{0.35 $\pm$ 0.22} \\
+Latent stage &    \textbf{0.80 $\pm$ 0.09} &    \textbf{0.53 $\pm$ 0.17} &      \textbf{0.80 $\pm$ 0.12} &    0.56 $\pm$ 0.18 &    0.50 $\pm$ 0.21 &    0.32 $\pm$ 0.24 \\
+Multivariate &   0.73 $\pm$ 0.09 &   0.45 $\pm$ 0.22  &    0.71 $\pm$ 0.08 & -0.28 $\pm$ 0.21* &  0.53 $\pm$ 0.22  &  0.25 $\pm$ 0.23* \\
+Spline &   0.52 $\pm$ 0.20* &  -0.03 $\pm$ 0.35* &     0.66 $\pm$ 0.11* &   0.09 $\pm$ 0.25* &    0.53 $\pm$ 0.20 &   0.30 $\pm$ 0.21* \\
+Linear &   0.52 $\pm$ 0.20* &    0.34 $\pm$ 0.27 &     0.66 $\pm$ 0.11* &    \textbf{0.64 $\pm$ 0.17} &    0.54 $\pm$ 0.22 &   0.30 $\pm$ 0.21* \\
+\end{tabular}
+\vspace{0.5em}
+% \caption[Performance evaluation of DKT and other models]{Performance evaluation of DKT and four other statistical models of decreasing complexity. }
+% \end{footnotesize}
+\label{sec:dktPerfMetrics}
+\end{table}
 
 
 \section*{Conclusion}
@@ -200,6 +250,10 @@ Develop a transfer learning model to transfer knowledge between diseases
 
 \end{multicols}
 \hrule
+
+
+}
+
 
 \begin{multicols}{2}
  							%Use 3-column layout
